# vgi-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  integration.yml  release.yml
ci/: README.md  coverage-report.sh  preprocess-require.awk  run-integration.sh
ci/wrappers/: vgi-worker-attach-options  vgi-worker-bad-protocol  vgi-worker-versioned  vgi-worker-versioned-tables
deploy/fly/: Dockerfile.storage-server  Dockerfile.worker  README.md  storage-server.fly.toml  worker.fly.toml
docs/: getting-started.md
scripts/: check_doc_examples.sh  run_http_tests.sh  run_tests.sh
test/landing/: describe.schema.json
vgi/: Cargo.toml  README.md
vgi-example-worker/: Cargo.toml
vgi-example-worker/src/: attach_options.rs  catalog_def.rs  coverage.rs  main.rs  same_name.rs  twin_catalogs.rs
vgi-example-worker/src/accumulate/: mod.rs
vgi-example-worker/src/aggregate/: mod.rs  tensor.rs
vgi-example-worker/src/buffering/: mod.rs
vgi-example-worker/src/copy_from/: mod.rs
vgi-example-worker/src/copy_to/: mod.rs
vgi-example-worker/src/narrow_bind/: mod.rs
vgi-example-worker/src/scalar/: cached.rs  fmt.rs  geo.rs  mod.rs  same_name.rs  util.rs
vgi-example-worker/src/table/: batch_index.rs  cache.rs  cancellable.rs  filters.rs  mod.rs  more.rs  order_modes.rs  partition.rs  proj_repro.rs  rff.rs  settings_fixtures.rs  static_scan.rs  tt_pushdown.rs  typed_probe.rs  versioned_scan.rs
vgi-example-worker/src/table_in_out/: blended.rs  cached.rs  mod.rs
vgi-example-worker/tests/: landing_conformance.rs
vgi-storage-server/: Cargo.toml
vgi-storage-server/src/: main.rs
vgi-storage-server/tests/: e2e.rs
vgi/src/: aggregate.rs  arguments.rs  buffering.rs  cache_control.rs  catalog.rs  copy_from.rs  copy_to.rs  describe.rs  dispatch.rs  function.rs  http_continuation_tests.rs  ipc.rs  lib.rs  numeric.rs  overload.rs  partition.rs  pushdown.rs  secrets.rs  settings.rs  statistics.rs  table_function.rs  table_in_out.rs  transport.rs  wasm_worker.rs  wire.rs  worker.rs
vgi/src/protocol/: dtos.rs  enums.rs  mod.rs  register.rs
vgi/src/storage/: conformance.rs  fs.rs  http.rs  memory.rs  mod.rs  sqlite.rs
