[workspace]
resolver = "2"
members = ["vgi", "vgi-example-worker"]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.86"
license-file = "LICENSE"
authors = ["Query Farm LLC <hello@query.farm>"]
homepage = "https://query.farm"
repository = "https://github.com/Query-farm/vgi-rust"

[workspace.dependencies]
# Published on crates.io. For local co-development against an unreleased
# vgi-rpc, add an (uncommitted) `[patch.crates-io]` pointing at the checkout:
#   [patch.crates-io]
#   vgi-rpc = { path = "../vgi-rpc-rust/vgi-rpc" }
vgi-rpc = { version = "0.2.0", default-features = false, features = ["macros", "http"] }
arrow = { version = "58", default-features = false, features = ["ipc"] }
arrow-array = "58"
arrow-buffer = "58"
arrow-data = "58"
arrow-ipc = "58"
arrow-schema = "58"
arrow-select = "58"
arrow-row = "58"
arrow-cast = "58"
arrow-arith = "58"
arrow-ord = "58"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 2
