[workspace]
resolver = "2"
members = ["vgi", "vgi-example-worker", "vgi-storage-server"]


[workspace.package]
version = "0.19.0"
edition = "2021"
rust-version = "1.90"
license-file = "LICENSE"
authors = ["Query Farm LLC <hello@query.farm>"]
homepage = "https://query.farm"
repository = "https://github.com/Query-farm/vgi-rust"

[workspace.dependencies]
# Published on crates.io. For local co-development against an unreleased
# vgi-rpc, add an (uncommitted) `[patch.crates-io]` pointing at the checkout:
#   [patch.crates-io]
#   vgi-rpc = { path = "../vgi-rpc-rust/vgi-rpc" }
# Base features carry NO http (axum/tokio/mio/zstd) so the crate stays
# wasm-buildable. Native crates that need the HTTP stack re-enable it via their
# own feature (`vgi`'s `transport-http`, or an explicit `features = ["http"]`).
vgi-rpc = { version = "0.12.0", default-features = false, features = ["macros", "stream-codec", "shm"] }
arrow = { version = "59", default-features = false, features = ["ipc"] }
arrow-array = "59"
arrow-buffer = "59"
arrow-data = "59"
arrow-ipc = "59"
arrow-schema = "59"
arrow-select = "59"
arrow-row = "59"
arrow-cast = "59"
arrow-arith = "59"
arrow-ord = "59"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Pure-Rust regex (wasm-safe) for enforcing const-argument `pattern` constraints.
regex = "1"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 2

# vgi-rpc 0.12.0 carries the wasm-buildability fixes (stream-codec gate on the
# producer/exchange decoders; windows-sys target-gated to Windows) that are not
# yet on crates.io. Point the whole workspace at the local checkout until 0.12.0
# is published. Remove this stanza once vgi-rpc 0.12.0 is on crates.io.
[patch.crates-io]
vgi-rpc = { path = "../vgi-rpc-rust/vgi-rpc" }
