[package]
name = "vgi-example-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
authors.workspace = true
homepage.workspace = true
description = "VGI example worker — integration-test fixture set (Rust port)"
# Test-fixture binary, not for crates.io (it has a path-only dep on `vgi`).
publish = false

[[bin]]
name = "vgi-example-worker"
path = "src/main.rs"

[features]
# Periodically flush LLVM coverage counters so a worker the integration suite
# kills abruptly (the pooled launcher / long-lived http workers) still leaves a
# .profraw. Calls the profiling runtime's own writer via FFI, so it must be
# built with `-Cinstrument-coverage` (which links that runtime).
coverage = []

[dependencies]
# `http-storage` lets the worker use the remote storage backend
# (VGI_WORKER_SHARED_STORAGE=http) for multi-instance deployments.
vgi = { path = "../vgi", features = ["http-storage"] }
vgi-rpc = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
arrow-buffer = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde_json = { workspace = true }
arrow-cast = { workspace = true }
arrow-arith = { workspace = true }
arrow-ord = { workspace = true }
arrow-select = { workspace = true }
arrow-row = { workspace = true }
ctrlc = "3"
sha2 = { version = "0.10", features = ["asm"] }
