[package]
name = "vgi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Build VGI workers in Rust to extend DuckDB with custom catalogs, functions, and tables over Apache Arrow IPC"
readme = "README.md"
keywords = ["vgi", "duckdb", "arrow", "rpc", "worker"]
categories = ["database", "api-bindings"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["sqlite"]
# Durable single-file SQLite storage backend (bundles libsqlite3 — compiles C).
sqlite = ["dep:rusqlite"]
# HTTP client storage backend (talks to a vgi-storage-server); for multi-instance
# deployments (e.g. fly.io) where workers share one durable store.
http-storage = []

[dependencies]
vgi-rpc = { workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-data = { workspace = true }
arrow-ipc = { workspace = true }
arrow-schema = { workspace = true }
arrow-select = { workspace = true }
arrow-cast = { workspace = true }
arrow-arith = { workspace = true }
arrow-ord = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
ctrlc = "3"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "signal"] }
# SQLite storage backend (feature `sqlite`). `bundled` compiles a vendored
# libsqlite3 so there is no system dependency; this is the one C-compiled dep.
rusqlite = { version = "0.32", features = ["bundled"], optional = true }

# Unix-only: used to namespace the cross-process store base dir by uid (so users
# sharing a /tmp don't collide) and to chmod it 0o700. `libc` is pure Rust (extern
# declarations only — it compiles no C), so the single-binary build is unaffected.
[target.'cfg(unix)'.dependencies]
libc = "0.2"
