[package]
name = "vgi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Build VGI workers in Rust to extend DuckDB with custom catalogs, functions, and tables over Apache Arrow IPC"
readme = "README.md"
keywords = ["vgi", "duckdb", "arrow", "rpc", "worker"]
categories = ["database", "api-bindings"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["sqlite", "transport-http"]
# Durable single-file SQLite storage backend (bundles libsqlite3 — compiles C).
sqlite = ["dep:rusqlite"]
# HTTP client storage backend (talks to a vgi-storage-server); for multi-instance
# deployments (e.g. fly.io) where workers share one durable store.
http-storage = ["dep:ureq", "dep:bincode"]
# HTTP *worker* transport (`--http`, axum/tokio). Pulls the tokio runtime and the
# vgi-rpc http stack. Off for wasm builds (tokio/mio/zstd don't compile to wasm);
# the wasm worker serves over stdio (and, on wasip2, raw TCP).
transport-http = ["dep:tokio", "vgi-rpc/http"]

[dependencies]
vgi-rpc = { workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-data = { workspace = true }
arrow-ipc = { workspace = true }
arrow-schema = { workspace = true }
arrow-select = { workspace = true }
arrow-cast = { workspace = true }
arrow-arith = { workspace = true }
arrow-ord = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
log = { workspace = true }
# tokio only backs the HTTP worker transport; optional + gated so the crate
# compiles for wasm (where tokio's rt-multi-thread/net features are unsupported).
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "signal"], optional = true }
# SQLite storage backend (feature `sqlite`). `bundled` compiles a vendored
# libsqlite3 so there is no system dependency; this is the one C-compiled dep.
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
# HTTP storage client (feature `http-storage`). `ureq` is a pure-sync blocking
# client — safe to call from a worker served over stdio OR inside a tokio HTTP
# runtime (no async nesting). `bincode` frames the request/response.
ureq = { version = "2", default-features = false, optional = true }
bincode = { version = "1", optional = true }

# Unix-only: used to namespace the cross-process store base dir by uid (so users
# sharing a /tmp don't collide) and to chmod it 0o700. `libc` is pure Rust (extern
# declarations only — it compiles no C), so the single-binary build is unaffected.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# ctrlc installs an OS signal handler for the unix/tcp launcher transports'
# graceful shutdown — not available (or needed) on wasm, which serves over stdio
# and exits on EOF.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctrlc = "3"

[dev-dependencies]
# Lightweight blocking HTTP client to drive the loopback HTTP server in the
# producer-continuation tests (no TLS needed for 127.0.0.1).
ureq = { version = "2", default-features = false }
